--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <content style="flex-grow: 8;">
             <article>
                 <h2>Article</h2>
-                Aenean varius, ex non dapibus gravida, erat risus sollicitudin velit, et rhoncus odio mi a neque. Duis et posuere metus. Maecenas eget ante sed tortor vulputate condimentum a sed velit. Curabitur at nisl est. Donec pellentesque tempus ante, vel ultrices nunc finibus id. Praesent fringilla nisl non mi sollicitudin, et faucibus erat consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur dolor orci, accumsan sed tellus id, faucibus posuere lectus. Aenean placerat a odio quis interdum. Donec in lacus in ligula aliquet blandit. Sed laoreet fermentum quam, ut euismod nulla tincidunt eu. Curabitur porttitor justo sem, ac facilisis enim tristique convallis. Fusce rutrum sem ut porttitor eleifend. Donec a massa eleifend, tempus dolor eu, finibus lorem. Ut nisl nibh, porta in porttitor vel, tincidunt vitae dui. Nam accumsan neque purus, sed pellentesque magna condimentum ac.
+                <p>Aenean varius, ex non dapibus gravida, erat risus sollicitudin velit, et rhoncus odio mi a neque. Duis et posuere metus. Maecenas eget ante sed tortor vulputate condimentum a sed velit. Curabitur at nisl est. Donec pellentesque tempus ante, vel ultrices nunc finibus id.</p>
+                <img src="images\darkwoods.jpg" alt="Picture of dark woods." height="600px" class="rightside">
+                <p>Praesent fringilla nisl non mi sollicitudin, et faucibus erat consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur dolor orci, accumsan sed tellus id, faucibus posuere lectus. Aenean placerat a odio quis interdum. Donec in lacus in ligula aliquet blandit. Sed laoreet fermentum quam, ut euismod nulla tincidunt eu. Curabitur porttitor justo sem, ac facilisis enim tristique convallis. Fusce rutrum sem ut porttitor eleifend. Donec a massa eleifend, tempus dolor eu, finibus lorem. Ut nisl nibh, porta in porttitor vel, tincidunt vitae dui. Nam accumsan neque purus, sed pellentesque magna condimentum ac.</p>
+                
             </article>
-            <img src="images\darkwoods.jpg" alt="Picture of dark woods." height="550px" class="center">
-
         </content>
     </div>
     <footer>
